--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,19 +9,16 @@ jobs:
       - image: circleci/openjdk:11.0.8-jdk-browsers
     steps:
       - checkout
-#      - restore_cache:
-#          keys:
-#            - v1-dependencies-{{ checksum "pom.xml" }}
-#            - v1-dependencies-
-#      - run: mvn dependency:go-offline
-#      - save_cache:
-#          paths:
-#            - ~/.m2
-#          key: v1-dependencies-{{ checksum "pom.xml" }}
-#
-      - run:
-          name: Checking Chrome version
-          command: chrome --version
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "pom.xml" }}
+            - v1-dependencies-
+      - run: mvn dependency:go-offline
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: v1-dependencies-{{ checksum "pom.xml" }}
+
       - run:
           name: Running tests
           command: mvn clean test
